--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-plus": "^1.0.2-beta.71",
+    "lodash": "^4.17.21",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.7.2",
-    "unplugin-vue-components": "^0.16.0",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0-0",
