--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "echarts": "^5.3.2",
     "element-plus": "^1.0.2-beta.71",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
+    "momentjs": "^2.0.0",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.7.2",
