--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "momentjs": "^2.0.0",
+    "pinia": "^2.0.14",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
-    "typescript": "^4.7.2",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0-0",
@@ -27,7 +27,9 @@
   "devDependencies": {
     "@arco-design/web-vue": "^2.29.1",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/cli-plugin-typescript": "^5.0.4",
     "naive-ui": "^2.19.11",
+    "typescript": "^4.7.3",
     "vfonts": "^0.1.0",
     "vite": "^2.9.8"
   }
