歌词功能创建、样式设计、以及尝试@apply新方法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "[FILE EXTENSION OF STEP 3].lint.unknownAtRules": "ignore",
+  "scss.lint.unknownAtRules": "ignore",
+  "css.lint.unknownAtRules": "ignore",
+  "vue.lint.unknownAtRules": "ignore",
+  "css.customData": ["./css-data.json"]
 }
