--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "momentjs": "^2.0.0",
     "pinia": "^2.0.14",
     "postcss": "^8.3.11",
+    "scss": "^0.2.4",
     "tailwindcss": "^2.2.17",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
