系统结构重铸、看板娘导入、歌词展示完善

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "dayjs": "^1.11.2",
     "echarts": "^5.3.2",
     "element-plus": "^1.0.2-beta.71",
+    "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "momentjs": "^2.0.0",
     "pinia": "^2.0.14",
     "postcss": "^8.3.11",
     "scss": "^0.2.4",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^2.2.17",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
