--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "[FILE EXTENSION OF STEP 3].lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
   "css.lint.unknownAtRules": "ignore",
-  "vue.lint.unknownAtRules": "ignore",
-  "css.customData": ["./css-data.json"]
+  "css.customData": [
+    "./css-data.json"
+  ],
+  // "css.validate": false,
+  // "less.validate": false,
+  // "scss.validate": false
 }
