--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "autoprefixer": "^10.3.7",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.2",
     "echarts": "^5.3.2",
