--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.2",
     "echarts": "^5.3.2",
     "element-plus": "^1.0.2-beta.71",
+    "gsap": "^3.10.4",
     "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
