--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
+// Place your settings in this file to overwrite default and user settings.
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "scss.lint.unknownAtRules": "ignore",
-  "css.lint.unknownAtRules": "ignore",
-  "css.customData": [
-    "./css-data.json"
-  ],
-  "css.validate": false,
-  "less.validate": false,
-  "scss.validate": false
+  "files.exclude": {
+    "out": false // set this to true to hide the "out" folder with the compiled JS files
+  },
+  "search.exclude": {
+    "out": true // set this to false to include "out" folder in search results
+  }
 }
