--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "serve": "vite",
-    "build": "vite build",
-    "dev": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
     "autoprefixer": "^10.3.7",
@@ -24,6 +23,7 @@
     "scss": "^0.2.4",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
+    "stylus": "^0.59.0",
     "tailwindcss": "^2.2.17",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
