--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@vueuse/core": "^9.2.0",
     "autoprefixer": "^10.3.7",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
