--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
   },
   "search.exclude": {
     "out": true // set this to false to include "out" folder in search results
-  }
+  },
+  "powermode.enabled": true,
+  "powermode.presets": "particles",
+  "powermode.combo.counterEnabled": "hide",
+  "powermode.combo.timeout": 60
 }
