--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,59 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "strict": true,
+    "noLib": false,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "strictFunctionTypes": false,
     "jsx": "preserve",
+    "baseUrl": ".",
+    "allowJs": true,
     "sourceMap": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "experimentalDecorators": true,
     "lib": [
-      "ESNext",
-      "DOM"
+      "dom",
+      "esnext"
     ],
-    "types": [
-      "vue/ref-macros"
-    ],
+    "noImplicitAny": false,
     "skipLibCheck": true,
-    "baseUrl": "./",
+    "types": [
+      "vite/client",
+      "element-plus/global"
+    ],
+    "removeComments": true,
     "paths": {
-      "@": [
-        "./src"
+      "@/*": [
+        "src/*"
       ],
-      "/": [
-        "./public"
+      "/*": [
+        "public/*"
       ]
-    },
+    }
   },
   "include": [
+    "tests/**/*.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "src/untils/common.js"
+    "types/**/*.d.ts",
+    "types/**/*.ts",
+    "build/**/*.ts",
+    "build/**/*.d.ts",
+    "mock/**/*.ts",
+    "vite.config.ts"
   ],
-  // "references": [
-  //   {
-  //     "path": "./tsconfig.node.json"
-  //   }
-  // ],
+  "exclude": [
+    "node_modules",
+    "tests/server/**/*.ts",
+    "dist",
+    "**/*.js"
+  ]
 }
