--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.2.17",
     "gsap": "^3.10.4",
     "highlight.js": "^11.6.0",
+    "less": "^4.1.3",
     "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -31,9 +32,7 @@
     "stylus": "^0.59.0",
     "tailwindcss": "^2.2.17",
     "vue": "^3.2.16",
-    "vue-router": "^4.0.12",
-    "vuex": "^4.0.0-0",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.29.1",
