--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less": "^4.1.3",
     "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "moment": "^2.29.3",
     "momentjs": "^2.0.0",
     "nprogress": "^0.2.0",
