--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.2",
     "echarts": "^5.3.2",
     "element-plus": "^2.2.17",
