--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "@fancyapps/ui": "^4.0.31",
     "@highlightjs/vue-plugin": "^2.1.0",
     "@vueuse/core": "^9.2.0",
