--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@fancyapps/ui": "^4.0.31",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "@highlightjs/vue-plugin": "^2.1.0",
+    "@kangc/v-md-editor": "^2.3.15",
     "@vueuse/core": "^9.2.0",
     "autoprefixer": "^10.3.7",
     "axios": "^0.27.2",
@@ -18,11 +22,16 @@
     "dayjs": "^1.11.2",
     "echarts": "^5.3.2",
     "element-plus": "^2.2.17",
+    "font-awesome": "^4.7.0",
     "gsap": "^3.10.4",
     "highlight.js": "^11.6.0",
     "less": "^4.1.3",
     "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-for-inline": "^0.1.1",
+    "markdown-it-mark": "^3.0.1",
     "mime": "^3.0.0",
     "moment": "^2.29.3",
     "momentjs": "^2.0.0",
@@ -35,15 +44,18 @@
     "stylus": "^0.59.0",
     "tailwindcss": "^2.2.17",
     "vue": "^3.2.16",
+    "vue-froala-wysiwyg": "^4.0.14",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.29.1",
+    "@types/node": "^18.11.7",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/cli-plugin-typescript": "^5.0.4",
     "naive-ui": "^2.19.11",
     "typescript": "^4.7.3",
     "vfonts": "^0.1.0",
-    "vite": "^2.9.8"
+    "vite": "^2.9.8",
+    "vite-plugin-prismjs": "^0.0.8"
   }
 }
