--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
     "build/**/*.ts",
     "build/**/*.d.ts",
     "mock/**/*.ts",
-    "vite.config.ts"
+    "vite.config.ts",
+    "src/main.ts"
   ],
   "exclude": [
     "node_modules",
