--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-for-inline": "^0.1.1",
     "markdown-it-mark": "^3.0.1",
+    "markdown-it-ruby": "^0.1.1",
     "mime": "^3.0.0",
     "moment": "^2.29.3",
     "momentjs": "^2.0.0",
@@ -52,7 +53,6 @@
     "@types/node": "^18.11.7",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/cli-plugin-typescript": "^5.0.4",
-    "naive-ui": "^2.19.11",
     "typescript": "^4.7.3",
     "vfonts": "^0.1.0",
     "vite": "^2.9.8",
