优化内存、删除不必要的依赖、顶部导航栏ui修改、修改部分动画效果、导入Animate动画库、图标组件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,10 +68,10 @@
     "editor.defaultFormatter": "vscode.html-language-features"
   },
   "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "aeschli.vscode-css-formatter"
   },
   "[less]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "mblode.pretty-formatter"
   },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -141,5 +141,6 @@
     "windi",
     "windicss",
     "zxcvbn"
-  ]
+  ],
+  "vue.codeActions.enabled": false
 }
