--- a/package.json
+++ b/package.json
@@ -8,51 +8,41 @@
     "preview": "vite preview --port 1111 "
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.10",
     "@fancyapps/ui": "^4.0.31",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/vue-fontawesome": "^2.0.8",
     "@highlightjs/vue-plugin": "^2.1.0",
+    "@iconify-icons/dashicons": "^1.2.4",
+    "@iconify/vue": "^4.1.1",
     "@kangc/v-md-editor": "^2.3.15",
-    "@vueuse/core": "^9.2.0",
-    "autoprefixer": "^10.3.7",
+    "@vueuse/core": "^9.13.0",
+    "autoprefixer": "^10.4.14",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "core-js": "^3.6.5",
+    "core-js": "^3.31.1",
     "crypto-js": "^4.1.1",
-    "dayjs": "^1.11.2",
-    "echarts": "^5.3.2",
-    "element-plus": "^2.2.21",
-    "font-awesome": "^4.7.0",
-    "highlight.js": "^11.6.0",
+    "dayjs": "^1.11.9",
+    "echarts": "^5.4.2",
+    "element-plus": "^2.3.8",
+    "highlight.js": "^11.8.0",
     "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
-    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-attrs": "^4.1.6",
     "markdown-it-for-inline": "^0.1.1",
     "markdown-it-mark": "^3.0.1",
     "markdown-it-ruby": "^0.1.1",
-    "mime": "^3.0.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.14",
-    "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0",
-    "stylus": "^0.59.0",
-    "tailwindcss": "^2.2.17",
-    "vue": "^3.2.16",
-    "vue-froala-wysiwyg": "^4.0.14",
-    "vue-router": "^4.0.12"
+    "pinia": "^2.1.4",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@arco-design/web-vue": "^2.29.1",
-    "@types/node": "^18.11.7",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/cli-plugin-typescript": "^5.0.4",
+    "@arco-design/web-vue": "^2.48.1",
+    "@types/node": "^18.16.19",
+    "@vitejs/plugin-vue": "^1.10.2",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "less": "^4.1.3",
-    "typescript": "^4.7.3",
+    "typescript": "^4.9.5",
     "vfonts": "^0.1.0",
-    "vite": "^2.9.8",
+    "vite": "^2.9.16",
     "vite-plugin-prismjs": "^0.0.8"
   }
 }
