--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "markdown-it-ruby": "^0.1.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
+    "vite-plugin-env-compatible": "^1.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
