--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify-icons/dashicons": "^1.2.4",
     "@iconify/vue": "^4.1.1",
     "@kangc/v-md-editor": "^2.3.15",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@vueuse/core": "^9.13.0",
     "autoprefixer": "^10.4.14",
     "axios": "^0.27.2",
