更换部分图标

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,10 +68,10 @@
     "editor.defaultFormatter": "vscode.html-language-features"
   },
   "[css]": {
-    "editor.defaultFormatter": "aeschli.vscode-css-formatter"
+    "editor.defaultFormatter": "vscode.css-language-features"
   },
   "[less]": {
-    "editor.defaultFormatter": "mblode.pretty-formatter"
+    "editor.defaultFormatter": "vscode.css-language-features"
   },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
