--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.6",
+    "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
     "markdown-it-for-inline": "^0.1.1",
+    "markdown-it-inline-comments": "^1.0.1",
     "markdown-it-mark": "^3.0.1",
     "markdown-it-ruby": "^0.1.1",
     "nprogress": "^0.2.0",
