新增ai摘要、修复贡献图显示不全的问题、

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lzymis",
   "version": "0.0.0",
   "scripts": {
-    "serve": "vite --open",
+    "serve": "vite",
     "dev": "vite --mode lzym",
     "build": "vite build",
     "preview": "vite preview --port 1111 "
