--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: 博客打包部署
 
 on:
-  push:
-    branches: [main] # 当推送到main分支时触发
+  workflow_dispatch:
+  # push:
+  #   branches: [main] # 当推送到main分支时触发
 
 jobs:
   deploy:
