--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
-name: 博客打包部署
+name: Deploy to server
 
 on:
-  workflow_dispatch:
-  # push:
-  #   branches: [main] # 当推送到main分支时触发
+  push:
+    branches: [main]
 
 jobs:
   deploy:
@@ -20,7 +19,7 @@ jobs:
         run: bun install
 
       - name: Build project
-        run: bun run build # 假设您的 package.json 中有 build 脚本
+        run: bun run build
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -29,9 +28,15 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd /home/useradmin/nginx/html
+            if [ ! -d "/home/useradmin/nginx/weboke/.git" ]; then
+              git clone https://github.com/yourusername/yourrepository.git /home/useradmin/nginx/weboke
+            fi
+            cd /home/useradmin/nginx/weboke
             git pull origin main
+            if ! command -v bun &> /dev/null; then
+              echo "Bun is not installed. Installing Bun..."
+              curl -fsSL https://bun.sh/install | bash
+              export PATH="/root/.bun/bin:$PATH"
+            fi
             bun install
             bun run build
-
-          # pm2 restart your-app  # 如果使用pm2管理Node.js应用
