--- a/.github/workflows/automaticDeploy.yml
+++ b/.github/workflows/automaticDeploy.yml
@@ -22,6 +22,10 @@ jobs:
       - name: 项目构建打包
         run: bun run build
 
+      # 设置路径变量
+      - name: 设置路径变量
+        run: echo "DEPLOY_PATH=/www/server/nginx/html/dist" >> $GITHUB_ENV
+
       # 删除旧的文件
       - name: 清空旧项目文件
         uses: appleboy/ssh-action@v0.1.7
@@ -30,7 +34,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            rm -rf /home/useradmin/nginx/html/dist/*
+            rm -rf $DEPLOY_PATH/*
 
       # 或者如果你只想上传构建后的文件
       - name: 上传构建后的文件
@@ -40,5 +44,5 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: "dist/"
-          target: "/home/useradmin/nginx/html/dist/"
+          target: "${{ env.DEPLOY_PATH }}/dist"
           strip_components: 1 #这样在上传时会删除源路径中的第一个目录（即 dist 目录），直接将 dist 目录中的文件上传到目标目录。
